@@ -8,6 +8,7 @@
 	  - curl-config: replaced by pkg-config
 	* Changed minimum support and release requirements:
 	  - POSIX.1: introduced minimum requirement of IEEE 1003.1-2001
+	  - C Compiler: introduced minimum requirement of ISO 9899:1999
 	  - FFmpeg/LibAV: raised minimum requirement to release 0.7
 	  - FLAC: raised minimum requirement to release 1.1.3
 	  - Berkeley DB: raised minimum requirement to release 4.1
